[package]
name = "rust-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
mockall = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regex = "1.10.2"
tempfile = "3.10.0"

[lints.clippy]
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
